--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
 name: Android CI
 
-on: [push]
+on:
+  push:
+    branches:
+    - release/*
 
 jobs:
-  build:
+ build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -11,5 +14,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Build with Gradle
-        run: ./gradlew assembleDebug
+      - name: Firebase auth with gcloud
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          version: '290.0.1'
+          service_account_key: ${{ secrets.FIREBASE_KEY }}
+          project_id: ${{ secrets.FIREBASE_PROJECT_ID }}
