--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-parcelize'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -100,6 +101,10 @@ dependencies {
     //Pagination
     implementation "androidx.paging:paging-runtime:3.1.1"
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+
+    //Firebase
+    implementation platform('com.google.firebase:firebase-bom:31.0.1')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
     //Tests
     testImplementation 'junit:junit:4.13.2'
