--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           service_account_key: ${{ secrets.FIREBASE_KEY }}
           project_id: ${{ secrets.FIREBASE_PROJECT_ID }}
       - name: build release 
-        run: ./gradlew assembleDebug
+        run: ./gradlew assembleRelease
       - name: upload artifact to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
