Add release finch library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,8 +89,11 @@ dependencies {
 
     //Finch
     debugImplementation 'com.github.kernel0x.finch:ui-drawer:2.0.2'
+    releaseImplementation 'com.github.kernel0x.finch:noop:2.0.2'
     debugImplementation 'com.github.kernel0x.finch:log-okhttp:2.0.2'
+    releaseImplementation 'com.github.kernel0x.finch:log-okhttp-noop:2.0.2'
     debugImplementation 'com.github.kernel0x.finch:log:2.0.2'
+    releaseImplementation 'com.github.kernel0x.finch:log-noop:2.0.2'
 
     //Lottie Animations
     implementation 'com.airbnb.android:lottie:5.2.0'
