--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,18 +14,12 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Firebase auth with gcloud
-        uses: google-github-actions/setup-gcloud@main
-        with:
-          version: '290.0.1'
-          service_account_key: ${{ secrets.FIREBASE_KEY }}
-          project_id: ${{ secrets.FIREBASE_PROJECT_ID }}
       - name: build release 
-        run: ./gradlew assembleRelease
+        run: ./gradlew assembleDebug
       - name: upload artifact to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
           appId: ${{secrets.FIREBASE_APP_ID}}
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           groups: testers
-          file: app/build/outputs/apk/release/app-release-unsigned.apk
+          file: app/build/outputs/apk/debug/app-debug.apk
